compiler/testData/diagnostics/tests/annotations/NonAnnotationClass.fir.kt
// RUN_PIPELINE_TILL: SOURCE
class Foo

@<!NOT_AN_ANNOTATION_CLASS!>Foo<!> class Bar
